# ChangeLog for app-arch/xz-utils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.93 2015/01/02 15:00:21 zlogene Exp $

  02 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> xz-utils-5.0.8.ebuild:
  ia64 stable wrt bug #533274

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.8.ebuild:
  Stable for sparc, wrt bug #533274

  01 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> xz-utils-5.0.8.ebuild:
  alpha stable wrt bug #533274

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.8.ebuild:
  Stable for ppc64, wrt bug #533274

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.8.ebuild:
  Stable for ppc, wrt bug #533274

  30 Dec 2014; Markus Meier <maekke@gentoo.org> xz-utils-5.0.8.ebuild:
  arm stable, bug #533274

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.8.ebuild:
  Stable for x86, wrt bug #533274

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.8.ebuild:
  Stable for amd64, wrt bug #533274

  23 Dec 2014; Jeroen Roovers <jer@gentoo.org> xz-utils-5.0.8.ebuild:
  Stable for HPPA (bug #533274).

*xz-utils-5.0.8 (22 Dec 2014)

  22 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> +xz-utils-5.0.8.ebuild,
  -xz-utils-5.1.3_alpha.ebuild, -xz-utils-5.1.4_beta.ebuild:
  Version bump. Removed old.

*xz-utils-5.2.0 (22 Dec 2014)

  22 Dec 2014; Luca Barbato <lu_zero@gentoo.org> +xz-utils-5.2.0.ebuild:
  Version bump.

*xz-utils-5.0.7 (20 Sep 2014)

  20 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> -xz-utils-5.0.6.ebuild,
  +xz-utils-5.0.7.ebuild:
  Version bump. Removed old.

*xz-utils-5.1.4_beta (15 Sep 2014)
*xz-utils-5.0.6 (15 Sep 2014)

  15 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> +xz-utils-5.0.6.ebuild,
  +xz-utils-5.1.4_beta.ebuild:
  Version bump.

  28 Apr 2014; Michał Górny <mgorny@gentoo.org> xz-utils-5.0.5-r1.ebuild,
  xz-utils-5.1.3_alpha.ebuild, xz-utils-9999.ebuild: